# umbrella

./: .dockerignore  Dockerfile  LICENSE  README.md
.copilot/: user-story-1.md  user-story-3.md
.github/.copilot/: user-story-2.md  user-story-4.md
.github/workflows/: release.yml
backend/: .dockerignore  .gitignore  README.md  api-test.http  main.py  pyproject.toml  requirements.txt  test-slideshow.http
backend/config/rooms/: kitchen.json
backend/tests/: test_main.py
frontend/: .dockerignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
src/: Dockerfile  Umbrella.sln
src/OpenWeatherMap.Sdk/: IOpenWeatherMapClient.cs  OpenWeatherMapClient.cs
src/OpenWeatherMap.Sdk.Tests/: OpenWeatherMap.Sdk.Tests.csproj  OpenWeatherMapClientTests.cs
src/PhilipsHue.Sdk/: HueClient.cs  IHueClient.cs
src/PhilipsHue.Sdk.Tests/: HueClientTest.cs  HueClientTests.cs  PhilipsHue.Sdk.Tests.csproj
src/Umbrella.Core.Tests/: CoreServiceTests.cs  EntitiesRepositoryTests.cs  EntitiesServiceTests.cs  ExtensionRepositoryTests.cs  RegistrationServiceTests.cs  Umbrella.Core.Tests.csproj
src/Umbrella.Extensions.Hue/: HueExtension.cs  Umbrella.Extensions.Hue.csproj
src/Umbrella.Extensions.OpenWeatherMap/: OpenWeatherMapExtension.cs  Umbrella.Extensions.OpenWeatherMap.csproj
src/Umbrella.Extensions.Xiaomi/: Umbrella.Extensions.Xiaomi.csproj  XiaomiExtension.cs
src/Umbrella.Ui/: Program.cs  Umbrella.Ui.csproj  WeatherForecast.cs
src/Umbrella.Web/: Program.cs  Umbrella.Web.csproj
src/Xiaomi.Sdk/: IXiaomiClient.cs  IXiaomiCloudClient.cs  XiaomiClient.cs  XiaomiCloudClient.cs
src/Xiaomi.Sdk.Tests/: Xiaomi.Sdk.Tests.csproj  XiaomiClientTests.cs
(+187 files in other folders)
